--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-target/*
-.settings/*
-.classpath
-.idea/*
-client_log.txt
-server_log.txt
+*/target/*
+*/.settings/*
+*/.classpath
+*/.project
+*/.idea/*
+*/client_log.txt
+*/server_log.txt
