--- a/BlackBoxFrameworkChatApp/.project
+++ b/BlackBoxFrameworkChatApp/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AntennaChatApp</name>
+	<name>BlackBoxFrameworkChatApp</name>
 	<comment></comment>
 	<projects>
 	</projects>
