--- a/Project/feature-u-soundboard/.env.example
+++ b/Project/feature-u-soundboard/.env.example
@@ -1,6 +1,6 @@
 SKIP_PREFLIGHT_CHECK=true
 DISABLE_ESLINT_PLUGIN=true
 
-AUTH0_DOMAIN=string
-AUTH0_CLIENT_ID=string
-AUTH0_SECRET=string
+REACT_APP_AUTH0_DOMAIN=string
+REACT_APP_AUTH0_CLIENT_ID=string
+REACT_APP_AUTH0_SECRET=string
