--- a/Project/feature-u-soundboard-api/package.json
+++ b/Project/feature-u-soundboard-api/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/sqlite3": "^3.1.7",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "sqlite3": "^5.0.2",
     "ts-node": "^10.4.0"
