--- a/Project/feature-u-soundboard-api/package.json
+++ b/Project/feature-u-soundboard-api/package.json
@@ -14,9 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/sqlite3": "^3.1.7",
+    "axios": "^0.24.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
     "sqlite3": "^5.0.2",
     "ts-node": "^10.4.0"
