--- a/Project/feature-u-soundboard/.env.example
+++ b/Project/feature-u-soundboard/.env.example
@@ -5,4 +5,4 @@ REACT_APP_AUTH0_DOMAIN=string
 REACT_APP_AUTH0_CLIENT_ID=string
 REACT_APP_AUTH0_SECRET=string
 
-API_ENDPOINT=string
+API_ENDPOINT=localhost:4000
