--- a/Project/feature-u-soundboard/package.json
+++ b/Project/feature-u-soundboard/package.json
@@ -15,9 +15,9 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "axios": "^0.24.0",
     "@types/react-router": "^5.1.17",
     "@types/react-router-dom": "^5.3.2",
+    "axios": "^0.24.0",
     "feature-redux": "^3.0.0",
     "feature-u": "^3.0.0",
     "react": "^17.0.2",
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@types/dom-mediacapture-record": "^1.0.11",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
