--- a/Project/feature-u-soundboard/package.json
+++ b/Project/feature-u-soundboard/package.json
@@ -8,6 +8,9 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
+    "@mui/styles": "^5.2.1",
+    "@mui/x-data-grid": "^5.0.1",
+    "@mui/x-data-grid-generator": "^5.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -15,9 +18,9 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "axios": "^0.24.0",
     "@types/react-router": "^5.1.17",
     "@types/react-router-dom": "^5.3.2",
+    "axios": "^0.24.0",
     "feature-redux": "^3.0.0",
     "feature-u": "^3.0.0",
     "react": "^17.0.2",
