--- a/Project/feature-u-soundboard-api/package.json
+++ b/Project/feature-u-soundboard-api/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-jwt": "^6.1.0",
+    "google-tts-api": "^2.0.2",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.0.5",
     "multer": "^1.4.3",
