--- a/Project/feature-u-soundboard-api/package.json
+++ b/Project/feature-u-soundboard-api/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
-    "build": "tsc",
+    "build": "tsc && yarn gen-db",
     "prestart": "npm run build",
     "start": "node .",
     "gen-db": "ts-node genDb.ts",
